# challenges

Weekly-Challenge-2022-Kotlin/: README.md  pyproject.toml
Weekly-Challenge-2022-Kotlin/challenges/: Challenge0.py  Challenge1.py  Challenge10.py  Challenge11.py  Challenge12.py  Challenge13.py  Challenge14.py  Challenge2.py  Challenge3.py  Challenge4.py  Challenge5.py  Challenge6.py  Challenge7.py  Challenge8.py  Challenge9.py
Weekly-Challenge-2022-Kotlin/challenges/utils/: reverse_dic.py  verify_type.py
advent-of-code/2022/: pyproject.toml
advent-of-code/2022/Day-1/: solution.py
advent-of-code/2022/Day-10/: solution.py
advent-of-code/2022/Day-2/: solution.py
advent-of-code/2022/Day-3/: solution.py
advent-of-code/2022/Day-4/: solution.py
advent-of-code/2022/Day-5/: solution.py
advent-of-code/2022/Day-6/: solution.py
advent-of-code/2022/Day-7/: solution.py
advent-of-code/2022/Day-8/: solution.py
advent-of-code/2022/Day-9/: solution.py
advent-of-code/2023/: pyproject.toml
advent-of-code/2023/Day1/: helpers.py  part_one.py  part_two.py  solution.py
fcc-coding-interview-prep/: package-lock.json  package.json  pyproject.toml
fcc-coding-interview-prep/data-structures/: create-a-stack-class.py
fcc-coding-interview-prep/src/: index.ts
fcc-coding-interview-prep/src/algorithms/: pairwise.py
fcc-coding-interview-prep/src/data-structures/: 4.create-a-queue-class.ts  8.perform-a-union-on-two-sets.ts
grind-75/: .eslintrc  1.two-sum.js  2.valid-parentheses.js  3.merge-two-sorted-lists.js  4.best-time-to-buy-and-sell-stock.js  5.valid-palindrome.js  6.invert-binary-tree.js  7.valid-anagram.js  8.binary-search.js  package.json  pyproject.toml  test.js  test2.js  test3.js
grind-75/hacker-rank/: jumping-on-the-clouds.js  sales-by-match.js
grind-75/mock-google/: calendar.js
grind-75/van-hack/: Thing.js  pairSumOrLess.js  test.py  web-scrapping.py
retos-programacion-2023/: README.md  pyproject.toml
retos-programacion-2023/reto-0/: main.py
retos-programacion-2023/reto-1/: main.py
retos-programacion-2023/reto-2/: main.py
retos-programacion-2023/reto-4/: main.py
(+14 files in other folders)
