[tool.poetry]
name = "retos-programacion-2023"
version = "0.1.0"
description = "Challenges in python from https://github.com/mouredev/retos-programacion-2023"
authors = ["Francisco Pantoja <franciscopantojag98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
